--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "primer proyecto con node.js",
   "main": "index.html",
   "scripts": {
+    "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "marisabel condori",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "lite-server": "^2.5.4"
+  }
 }
