--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4",
+    "node-less": "^1.0.0",
     "node-sass": "^4.14.1"
   },
   "dependencies": {
