--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "main": "index.html",
   "scripts": {
     "dev": "lite-server",
+    "start": "concurrently \"npm run watch:scss\" \"npm run dev\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass -o css/ css/"
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange 'css/*.css' -- npm run scss",
+    "clean": "rimraf dist",
+    "imagemin": "imagemin images/* --out-dir dist/images",
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html && usemin about.html -d dist --htmlmin -o dist/about.html && usemin precios.html -d dist --htmlmin -o dist/precios.html && usemin contactos.html -d dist --htmlmin -o dist/contactos.html",
+    "build": "npm run clean && npm run scss && npm run imagemin && npm run usemin"
   },
   "author": "marisabel condori",
   "license": "ISC",
   "devDependencies": {
+    "copyfiles": "^2.3.0",
     "lite-server": "^2.5.4",
     "node-less": "^1.0.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.2",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "concurrently": "^5.2.0",
     "jquery": "^3.5.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.16.1"
